# siniis

./: .gitignore  add_step_numbers.py  check_file_utility_202511.py  circuit_breaker.py  constants.py  dependencies.json  dependency_loader.py  env.var  execution_202501_log  generate_monthly_pipelines.py  generate_ordinaria_pipelines.py  generate_pipelines.py  generate_pipelines_by_speciali.py  generate_pipelines_v2.py  metrics.py  mongodb_checker.py  mongodb_checker_async.py  opirunner.py  pipeline202512.json  pipeline202601.json  pipeline_schema.json  progress_tracker.py  run_pipeline202510.sh  run_solo_stipendi_new.sh  run_solo_stipendi_old.sh  setup.sh  test_all_pipelines.py  test_dependencies.py  test_mongo_connection.py  test_opirunner.py  test_parallel_pipeline.json  test_pipeline_debug.json  test_timeline.py  test_validation.py  test_waves.py  verify_all_dependencies.py  verify_all_pipelines_final.py  verify_january_february.py  verify_parallel_waves.py  verify_pipelines.py
gestione-siniis/: .env.template  README.md  build.sh  projects.yaml  pyproject.toml  requirements_build.txt
gestione-siniis/src/gestione_siniis/: __main__.py  check_connection.py  cli.py  constants.py  core.py  pyproject.toml
gestione_siniis/: __init__.py  __main__.py  cli.py  core.py  env.var
opi-siniis/: .env.template  .gitattributes  README.md  build.sh  opi-siniis.properties.template  opi-siniis.py  projects.yaml  pyproject.toml  requirements_build.txt
opi-siniis/src/opi_siniis/: __main__.py  cli.py  constants.py  core.py
opi-siniis/tests/: test_core.py
siniis_da_pushare/gestione_siniis/: check_connection.py  core.py
