[tool.poetry]
name = "gestione-siniis"
version = "0.1.0"
description = "Gestione flussi SINIIS"
authors = ["Mirco Mazzolena <mirco.mazzolena2@dxc.com>"]
readme = "README.md"
packages = [{include = "gestione_siniis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^*"
loguru = "*"
pymongo = "*"
oracledb = "*"

[tool.poetry.scripts]
siniis = "gestione_siniis.__main__:main"
siniis-check = "gestione_siniis.check_connection:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
