[tool.poetry]
name = "gestione-siniis"
version = "0.1.0"
description = "Gestione flussi SINIIS"
authors = ["Mirco Mazzolena <mirco.mazzolena2@dxc.com>"]
readme = "README.md"
packages = [{include = "gestione_siniis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "0.12.5"
loguru = "0.7.3"
pymongo = "^4.6.0"
oracledb = "2.5"

[tool.poetry.scripts]
siniis = "gestione_siniis.__main__:main"
siniis-check = "gestione_siniis.check_connection:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
